--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/aayodipe/Friendfinder#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "jquery-modal": "^0.9.2",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
