--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This app requires the users to fill in their information and then the app responded with a filtered match",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
